<resources>
    <string name="Title" translatable="false">Title</string>
    <string name="Required" translatable="true">*Required</string>
    <string name="InvalidEmail" translatable="true">Invalid Email</string>
    <string name="Must6Chars" translatable="true">Must 6 or more chars</string>
    <string name="Must9Chars" translatable="true">Must 9 chars</string>
    <string name="EmailNotExist" translatable="true">Email not exist in the system</string>
    <string name="EmailExist" translatable="true">Email exist in the system</string>
    <string name="WrongPassword" translatable="true">Wrong Password</string>
    <string name="Next" translatable="true">Next</string>
    <string name="DifferentPassword" translatable="true">Confirm Password Not match</string>
    <string name="OK" translatable="true">Ok</string>
    <string name="Cancel" translatable="true">Cancel</string>
    <string name="Loading" translatable="true">Loading</string>
    <string name="Finish" translatable="true">Finish</string>
    <string name="DontHaveAccountCreateAccount" translatable="true">Don\'t have account? Create Account</string>
    <string name="Other" translatable="true">Other</string>
    <string name="Select" translatable="true">Select</string>
    <string name="Search" translatable="true">Search</string>
    <string name="UserType" translatable="true">User Type</string>
    <string name="Student" translatable="true">Student</string>
    <string name="Teacher" translatable="true">Teacher</string>
    <string name="Admin" translatable="true">Admin</string>
    <string name="Error" translatable="true">Error</string>
    <string name="ErrorMSG" translatable="true">Something went wrong please try again in a few minutes.</string>
    <string name="app_name" translatable="true">Easy Learn</string>
    <string name="SignIn" translatable="true">Sign In</string>
    <string name="CreateAccount" translatable="true">Create Account</string>
    <string name="ResetPassword" translatable="true">Reset Password</string>
    <string name="About" translatable="true">About</string>
    <string name="Contact" translatable="true">Contact</string>
    <string name="Language" translatable="true">Language</string>
    <string name="SelectLanguage" translatable="true">Select Language</string>
    <string name="English" translatable="true">English</string>
    <string name="Hebrew" translatable="true">Hebrew</string>
    <string name="Exit" translatable="true">Exit</string>
    <string name="AreYouSureToExit" translatable="true">Are you sure you want to Exit?</string>
    <string name="Email" translatable="true">Email</string>
    <string name="CheckEmailVerify" translatable="true">This account not verify yet, please check the link sent to your email to verify this account.</string>
    <string name="Password" translatable="true">Password</string>
    <string name="RecoverPassword" translatable="true">Forgot password? Reset Password</string>
    <string name="Google" translatable="true">Google</string>
    <string name="OR" translatable="true">OR</string>
    <string name="FirstName" translatable="true">First Name</string>
    <string name="LastName" translatable="true">Last Name</string>
    <string name="BirthDay" translatable="true">BirthDay</string>
    <string name="RequiredAge18OrMore" translatable="true">Required Age 18 Or More</string>
    <string name="InvalidDateOfBirth" translatable="true">Invalid Date Of BirthDay</string>
    <string name="ConfirmPassword" translatable="true">Confirm Password</string>
    <string name="AlreadyHaveAccount" translatable="true">Already Have Account? Sign In</string>
    <string name="SelectUserType" translatable="true">Select User Type</string>
    <string name="FinishCreateAccount" translatable="true">A message has been sent to your email to verify and complete the registration.</string>
    <string name="CompleteCreateAccount" translatable="true">Successfully registered, Please verify your email with link sent to your email.</string>
    <string name="ForgotPasswordInfo" translatable="true">Please enter the email address which you want to reset the password.</string>
    <string name="ResetLink" translatable="true">Reset Link has been send to your Email.</string>
    <string name="AboutVersion" translatable="true">Version 1.1.0</string>
    <string name="Copyright" translatable="true">&#169;2022 Daniel Elmaliach</string>
    <string name="AboutInfo" translatable="true">The app was developed as part of a final project by Daniel Elmaliach with the goal of creating a comfortable environment for watching lectures and learning comfortably and providing feedback to lecturers about excerpts that were less clear by adding a comment while specifying the desired time segment for a particular recording</string>
    <string name="ContactInfo" translatable="true">Have you meet any problem?\nThe development team is at your service</string>
    <string name="ContactSubject" translatable="true">Contact - App EasyLearnSCE</string>
    <string name="ContactText" translatable="true">Team EasyLearnSCE, </string>
    <string name="ContactEmailChooser" translatable="true">Choose an Email App</string>
    <string name="Home" translatable="true">Home</string>
    <string name="SelectEngineering" translatable="true">Select Engineering</string>
    <string name="Profile" translatable="true">Profile</string>
    <string name="RequestPermissions" translatable="true">Request Permissions</string>
    <string name="Requests" translatable="true">Requests</string>
    <string name="ChangePassword" translatable="true">Change Password</string>
    <string name="SignOut" translatable="true">Sign Out</string>
    <string name="EasyLearnChat" translatable="true">EasyLearn Chat</string>
    <string name="Yes" translatable="true">Yes</string>
    <string name="No" translatable="true">No</string>
    <string name="AreYouSure" translatable="true">Are you sure you want to Sign Out?</string>
    <string name="StructuralEngineering" translatable="true">Structural Engineering</string>
    <string name="MechanicalEngineering" translatable="true">Mechanical Engineering</string>
    <string name="ElectricalEngineering" translatable="true">Electrical Engineering</string>
    <string name="SoftwareEngineering" translatable="true">Software Engineering</string>
    <string name="IndustrialEngineering" translatable="true">Industrial Engineering</string>
    <string name="ChemicalEngineering" translatable="true">Chemical Engineering</string>
    <string name="ProgrammingComputer" translatable="true">Programming Computer</string>
    <string name="PreEngineering" translatable="true">Pre Engineering</string>
    <string name="SelectYear" translatable="true">Select Year</string>
    <string name="SelectSemester" translatable="true">Select Semester</string>
    <string name="SelectCourse" translatable="true">Select Course</string>
    <string name="SelectDepartment" translatable="true">Select Department</string>
    <string name="FirstYear" translatable="true">First Year</string>
    <string name="SecondYear" translatable="true">Second Year</string>
    <string name="ThirdYear" translatable="true">Third Year</string>
    <string name="FourthYear" translatable="true">Fourth Year</string>
    <string name="FirstSemester" translatable="true">First Semester</string>
    <string name="SecondSemester" translatable="true">Second Semester</string>
    <string name="SummerSemester" translatable="true">Summer Semester</string>
    <string name="CourseSuccessfullyAdded" translatable="true">The course was successfully added.</string>
    <string name="CourseExists" translatable="true">The course already exists in the system.</string>
    <string name="CourseSuccessfullyRemoved" translatable="true">The course was successfully removed.</string>
    <string name="Remove" translatable="true">Remove</string>
    <string name="Add" translatable="true">Add</string>
    <string name="AddLecture" translatable="true">Add Lecture</string>
    <string name="AddExercise" translatable="true">Add Exercise</string>
    <string name="EditTopics" translatable="true">Edit Topics</string>
    <string name="Edit" translatable="true">Edit</string>
    <string name="LinkToVideo" translatable="true">Link To Video</string>
    <string name="AddVideo" translatable="true">Add Video</string>
    <string name="EditCourse" translatable="true">Edit Course</string>
    <string name="EditSaved" translatable="true">The changes have been saved successfully.</string>
    <string name="Lectures" translatable="true">Lectures</string>
    <string name="Exercises" translatable="true">Exercises</string>
    <string name="Lecture" translatable="true">Lecture</string>
    <string name="SelectLecture" translatable="true">Select Lecture</string>
    <string name="LectureSuccessfullyAdded" translatable="true">The Lecture was successfully added.</string>
    <string name="LectureSuccessfullyRemoved" translatable="true">The Lecture was successfully removed.</string>
    <string name="SelectExercise" translatable="true">Select Exercise</string>
    <string name="ExerciseSuccessfullyAdded" translatable="true">The Exercise was successfully added.</string>
    <string name="ExerciseSuccessfullyRemoved" translatable="true">The Exercise was successfully removed.</string>
    <string name="RemoveLecture" translatable="true">Remove Lecture</string>
    <string name="Exercise" translatable="true">Exercise</string>
    <string name="RemoveExercise" translatable="true">Remove Exercise</string>
    <string name="Save" translatable="true">Save</string>
    <string name="TimePicker" translatable="true">TimePicker</string>
    <string name="TimeRequired" translatable="true">Time Required to fill Hours, Minutes and seconds.</string>
    <string name="Hours" translatable="true">Hours</string>
    <string name="Minutes" translatable="true">Minutes</string>
    <string name="Seconds" translatable="true">Seconds</string>
    <string name="AddTopic" translatable="true">Add Topic</string>
    <string name="Topic" translatable="true">Topic</string>
    <string name="StartTime" translatable="true">Start Time</string>
    <string name="EndTime" translatable="true">End Time</string>
    <string name="EditUrl" translatable="true">Edit Url</string>
    <string name="MessageError" translatable="true">It is not possible to send a new message when there are no topics</string>
    <string name="Chats" translatable="true">Chats</string>
    <string name="Users" translatable="true">Users</string>
    <string name="Send" translatable="true">Send</string>
    <string name="Details" translatable="true">Details</string>
    <string name="Approved" translatable="true">Approved</string>
    <string name="Denied" translatable="true">Denied</string>
    <string name="Request" translatable="true">Request</string>
    <string name="Answer" translatable="true">Answer</string>
    <string name="Course" translatable="true">Course</string>
    <string-array name="Department">
        <item>@string/StructuralEngineering</item>
        <item>@string/MechanicalEngineering</item>
        <item>@string/ElectricalEngineering</item>
        <item>@string/SoftwareEngineering</item>
        <item>@string/IndustrialEngineering</item>
        <item>@string/ChemicalEngineering</item>
        <item>@string/ProgrammingComputer</item>
        <item>@string/PreEngineering</item>
    </string-array>
    <string-array name="Year">
        <item>@string/PreEngineering</item>
        <item>@string/FirstYear</item>
        <item>@string/SecondYear</item>
        <item>@string/ThirdYear</item>
        <item>@string/FourthYear</item>
    </string-array>
    <string-array name="Semester">
        <item>@string/FirstSemester</item>
        <item>@string/SecondSemester</item>
        <item>@string/SummerSemester</item>
    </string-array>
    <string name="AddCourse" translatable="true">Add Course</string>
</resources>