<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Request"
                style="@style/TextView_Style_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/Request"
                android:textColor="@color/default_color"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/FullName"
                style="@style/TextView_Style_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Name"
                android:textColor="@color/default_color"
                android:padding="1dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/Request"
                app:layout_constraintTop_toBottomOf="@+id/Request" />

            <TextView
                android:id="@+id/EmailRequest"
                style="@style/TextView_Style_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="@color/default_color"
                android:padding="1dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/FullName"
                app:layout_constraintTop_toBottomOf="@+id/FullName" />

            <TextView
                android:id="@+id/Type"
                style="@style/TextView_Style_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/UserType"
                android:textColor="@color/default_color"
                android:textSize="20sp"
                android:padding="1dp"
                app:layout_constraintStart_toStartOf="@+id/EmailRequest"
                app:layout_constraintTop_toBottomOf="@+id/EmailRequest" />

            <TextView
                android:id="@+id/Details"
                style="@style/TextView_Style_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Details"
                android:textColor="@color/default_color"
                android:textSize="20sp"
                android:padding="1dp"
                app:layout_constraintStart_toStartOf="@+id/Type"
                app:layout_constraintTop_toBottomOf="@+id/Type" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutAnswer"
                style="@style/TextInputLayout_Style"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/Answer"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/Details"
                app:layout_constraintTop_toBottomOf="@+id/Details"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextInputAnswer"
                    style="@style/TextInputEditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutAnswer">

                <Button
                    android:id="@+id/RequestApproved"
                    style="@style/Button_Style"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/Approved"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/RequestDenied"
                    style="@style/Button_Style"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/Denied"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
