<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutCourse"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            app:startIconDrawable="@drawable/book"
            android:hint="@string/Course"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputCourse"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutTeacherName"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:hint="@string/Teacher"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/person"
        app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutCourse"
        app:layout_constraintStart_toStartOf="@+id/TextInputLayoutCourse"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutCourse">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextInputTeacherName"
            style="@style/TextInputEditText_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutDepartment"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:hint="@string/Department"
            app:startIconDrawable="@drawable/engineering"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutTeacherName"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutTeacherName"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutTeacherName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputDepartment"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutYear"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:hint="@string/Year"
            app:startIconDrawable="@drawable/date"
            app:endIconDrawable="@drawable/drop_down"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutDepartment"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutDepartment"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutDepartment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputYear"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutSemester"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:hint="@string/Semester"
            app:endIconDrawable="@drawable/drop_down"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutYear"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutYear"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutYear">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputSemester"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ButtonAddCourse"
            style="@style/Button_Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/AddCourse"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutSemester"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutSemester"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutSemester" />

        <Button
            android:id="@+id/ButtonCancel"
            style="@style/Button_Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Cancel"
            app:layout_constraintEnd_toEndOf="@+id/ButtonAddCourse"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ButtonAddCourse"
            app:layout_constraintTop_toBottomOf="@+id/ButtonAddCourse" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>