<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guest.About">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sky">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/Version"
            style="@style/Custom_TextView_Big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/AboutVersion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            style="@style/Custom_TextView_Big"
            android:id="@+id/Copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Copyright"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="@+id/Version"
            app:layout_constraintStart_toStartOf="@+id/Version"
            app:layout_constraintTop_toBottomOf="@+id/Version" />

        <TextView
            android:id="@+id/About"
            style="@style/Custom_TextView_Big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/AboutInfo"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="@+id/Version"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Version"
            app:layout_constraintTop_toBottomOf="@+id/Copyright" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/GuestNavView"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/guest_nav_header"
        app:itemBackground="@drawable/drawer_list_selector"
        app:menu="@menu/guest_menu" />
</androidx.drawerlayout.widget.DrawerLayout>